OMAP4+: Add ability to store reboot reason
Bootloaders need to know when their platforms do a reboot.
The only memory that is retained is SAR ram accross reboots,
provide ability to store the reboot reason in a standard location
in the SAR memory (using the last 0xf bytes in SAR BANK1 ram).

This is now populated with the string "normal" if the reboot
is due to ordinary reboot commands, if the reboot reason is
for other reasons, such as bootloader or recovery as is the
case with Android systems, this stores the same.

NOTE: bootloader should be updated accordingly.

Change-Id: I32d05ef023682a1530b34315dac90fd97bed3265
Signed-off-by: Nishanth Menon <nm@ti.com>

Conflicts:
	arch/arm/mach-omap2/Kconfig
	arch/arm/mach-omap2/Makefile

--- a/arch/arm/mach-omap2/Makefile
+++ b/arch/arm/mach-omap2/Makefile
@@ -339,3 +339,7 @@ obj-$(CONFIG_ARCH_OMAP4)		+= omap_gcxxx.o
 include arch/arm/mach-omap2/Makefile.sec
 include arch/arm/mach-omap2/Makefile.chn
 include arch/arm/mach-omap2/Makefile.mid
+
+ifeq ($(CONFIG_OMAP_REBOOT_REASON),y)
+obj-$(CONFIG_ARCH_OMAP4)		+= omap4-reboot-reason.o
+endif
